--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <!-- OpenGraph Meta Tags -->
 <meta property="og:site_name"
-      content="Я б у бухгалтери пішов..."/>
+      content="Я у буГалтери пішов..."/>
 <meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
 <meta property="og:title"
-      content="Я б у бухгалтери пішов..."/>
+      content="Я у буГалтери пішов..."/>
 <meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
 <meta property="og:description"
       content="Найсмішніші помилки з декларацій"/>
@@ -23,7 +23,7 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:url" content="http://texty.org.ua/d/2019/misprints/"/>
 <meta name="twitter:title"
-      content="Я б у бухгалтери пішов..."/>
+      content="Я у буГалтери пішов..."/>
 <meta name="twitter:description"
       content="Найсмішніші помилки з декларацій"/>
 <meta name="twitter:image:src" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
@@ -33,7 +33,7 @@
 
 <!-- Other Meta Tags -->
 <meta name="title"
-      content="Я б у бухгалтери пішов...">
+      content="Я у буГалтери пішов...">
 <meta name="description"
       content="Найсмішніші помилки з декларацій">
 
@@ -62,13 +62,13 @@
 <header>
     <!--<div id="cover-hover"></div>-->
     <img src="img/cover.png"/>
-    <h1 id="title" class="desk">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;margin-right: 5px">г</span>алтери пійшов...<br> найсмішніші помилки з декларацій
+    <h1 id="title" class="desk">Я у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;margin-right: 5px">г</span>алтери пійшов...<br> найсмішніші помилки з декларацій
     </h1>
 </header>
 <main>
 
 <div class="textContent">
-    <h1 id="title" class="mob">Я б у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive; margin-right: 5px">г</span>алтери пійшов...<br> Найсмішніші помилки з декларацій
+    <h1 id="title" class="mob">Я у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive; margin-right: 5px">г</span>алтери пійшов...<br> Найсмішніші помилки з декларацій
     </h1>
 
     <p>У червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних із понад мільйона декларацій. Виконання цього проекту мало одну особливість. Декларанти при зазначенні своїх професій наробили стільки помилок і хибодруків, що це суттєво ускладнило процес аналізу даних. Але, ніде правди діти, від цього він став дещо веселішим.
@@ -204,7 +204,7 @@
 <p>Не треба недооцінювати те, чим ви займаєтесь.
 </p>
 
- <p>А ще не треба брати нашу жартівливу колонку близько до серця. Із 311 тисяч відібраних слів трохи більше за 7 тисяч були написані з помилками, що складає 2.35%. Помилки ми шукали за допомогою бібліотеки hunspell (точність визначення помилково написаного слова склала понад 95%). Більшість зі знайдених нами помилок не є системними, хоча й без них, звісно, не обходиться.
+ <p style="margin-top:100px">А ще не треба брати нашу жартівливу колонку близько до серця. Із 311 тисяч відібраних слів трохи більше за 7 тисяч були написані з помилками, що складає 2.35%. Помилки ми шукали за допомогою бібліотеки hunspell (точність визначення помилково написаного слова склала понад 95%). Більшість зі знайдених нами помилок не є системними, хоча й без них, звісно, не обходиться.
  </p>
 
     <p>Просто, якщо колись вам доведеться заповнювати декларацію, пильнуйте за тим, що пишете.
