--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Я б у бухгалтери пішов...</title>
+<title>Інспектор ВОР уоазор</title>
 
 <!-- OpenGraph Meta Tags -->
 <meta property="og:site_name"
-      content="Я у буГалтери пішов..."/>
+      content="Інспектор ВОР уоазор"/>
 <meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
 <meta property="og:title"
-      content="Я у буГалтери пішов..."/>
+      content=" Інспектор ВОР уоазор"/>
 <meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
 <meta property="og:description"
-      content="Найсмішніші помилки з декларацій"/>
+      content="Найсмішніші помилки та абревіатури з декларацій чиновників"/>
 <meta property="og:url" content=""/>
 
 
@@ -23,9 +23,9 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:url" content="http://texty.org.ua/d/2019/misprints/"/>
 <meta name="twitter:title"
-      content="Я у буГалтери пішов..."/>
+      content="Інспектор ВОР уоазор"/>
 <meta name="twitter:description"
-      content="Найсмішніші помилки з декларацій"/>
+      content="Найсмішніші помилки та абревіатури з декларацій чиновників"/>
 <meta name="twitter:image:src" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
 <meta name="twitter:image:width" content="1200"/>
 <meta name="twitter:image:height" content="630"/>
@@ -33,9 +33,9 @@
 
 <!-- Other Meta Tags -->
 <meta name="title"
-      content="Я у буГалтери пішов...">
+      content="Інспектор ВОР уоазор">
 <meta name="description"
-      content="Найсмішніші помилки з декларацій">
+      content="Найсмішніші помилки та абревіатури з декларацій чиновників">
 
 
 <!-- Links -->
@@ -61,13 +61,13 @@
 <header>
     <!--<div id="cover-hover"></div>-->
     <img src="img/cover.png"/>
-    <h1 id="title" class="desk">Я у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive;margin-right: 8px">г</span>алтери пійшов...<br> найсмішніші помилки з декларацій
+    <h1 id="title" class="desk"><span style="font-family: 'Bad Script', cursive; letter-spacing: 4px; color:red; margin-bottom: 20px">Інспектор ВОР уоазор</span><br>Найсмішніші помилки та абревіатури з декларацій чиновників
     </h1>
 </header>
 <main>
 
 <div class="textContent">
-    <h1 id="title" class="mob">Я у бу<span class="strike" style="color:red; font-style:italic; font-family: 'Bad Script', cursive; margin-right: 8px">г</span>алтери пійшов...<br> Найсмішніші помилки з декларацій
+    <h1 id="title" class="mob"><span style="font-family: 'Bad Script', cursive; letter-spacing: 4px; color:red">Інспектор ВОР уоазор</span><br>Найсмішніші помилки та абревіатури з декларацій чиновників
     </h1>
 
     <p>У червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних із понад мільйона декларацій. Виконання цього проекту мало одну особливість. Декларанти при зазначенні своїх професій наробили стільки помилок і хибодруків, що це суттєво ускладнило процес аналізу даних. Але, ніде правди діти, від цього він став дещо веселішим.
