--- a/index.html
+++ b/index.html
@@ -61,14 +61,21 @@
 <header>
     <!--<div id="cover-hover"></div>-->
     <img src="img/cover.png"/>
-    <h1 id="title" class="desk"><span style="font-family: 'Bad Script', cursive; letter-spacing: 4px; color:red; margin-bottom: 20px">Інспектор ВОР уоазор</span><br>Найсмішніші помилки та абревіатури з декларацій чиновників
-    </h1>
+    <div id="titleContainer" class="desk">
+        <h1 id="title" class="desk">«Інспектор <span style="letter-spacing: 4px; color:red; margin-bottom: 20px;
+">ВОР </span>уоазор»</h1>
+        <h1 id="subtitle" class="desk">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
+    </div>
+
 </header>
 <main>
 
 <div class="textContent">
-    <h1 id="title" class="mob"><span style="font-family: 'Bad Script', cursive; letter-spacing: 4px; color:red">Інспектор ВОР уоазор</span><br>Найсмішніші помилки та абревіатури з декларацій чиновників
-    </h1>
+    <div id="titleContainer" class="mob">
+        <h1 id="title">«Інспектор <span style="letter-spacing: 4px; color:red; margin-bottom: 20px;
+">ВОР </span>уоазор»</h1>
+        <h1 id="subtitle">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
+    </div>
 
     <p>У червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних із понад мільйона декларацій. Виконання цього проекту мало одну особливість. Декларанти при зазначенні своїх професій наробили стільки помилок і хибодруків, що це суттєво ускладнило процес аналізу даних. Але, ніде правди діти, від цього він став дещо веселішим.
     </p>
@@ -103,12 +110,12 @@
     <p><span class="misprint">майст<span class="strike">а</span>р</span> — зірка цеху</p>
     <p><span class="misprint"><span class="strike">шикалат</span></span> — жартуємо) такого в деклараціях не було, але ми точно знаємо, що деякі люди пишуть це слово саме так.
     </p>
-    <p>Цікаво, що найбільшої кількості системних помилок припускаються в назві професії "спеціаліст". Ми знайшли щонайменше 5 альтернативних способів написання цього слова: <b>спецеаліст, спеціліст, специаліст, спецаліст, спеціалист.</b>
+    <p>Цікаво, що найбільшої кількості системних помилок припускаються в назві професії «спеціаліст». Ми знайшли щонайменше 5 альтернативних способів написання цього слова: <b>спецеаліст, спеціліст, специаліст, спецаліст, спеціалист.</b>
     </p>
 
-    <p>Цікаві варіанти написання таких професій, як "бригадир" та "диспетчер". А от у назвах "офіцер", "інспектор", "секретар", "механік" найрозповсюдженішою помилкою є російський варіант написання цих слів.
+    <p>Цікаві варіанти написання таких професій, як «бригадир» та «диспетчер». А от у назвах «офіцер», «інспектор», «секретар», «механік» найрозповсюдженішою помилкою є російський варіант написання цих слів.
 
-     <p>Якщо сумніваєтесь, одна чи дві “Н” — краще ставити три. Всі ж так робили в шкільних диктантах… Хай краще думають, що у вас залипла кнопка на клавіатурі.
+     <p>Якщо сумніваєтесь, одна чи дві «Н» — краще ставити три. Всі ж так робили в шкільних диктантах… Хай краще думають, що у вас залипла кнопка на клавіатурі.
 </p>
     <p class="desk">Гортайте слайдер вліво-вправо за допомогою миші або стрілок на клавіатурі, щоб переглянути всі хибодруки. Ми виписали всі варіанти помилок та хибодруків, які траплялись більше одного разу.
     </p>
@@ -137,7 +144,7 @@
     <div class="textContent">
     <h2>З апострофом треба шось рєшать
     </h2>
-    <p>Що там не кажи, а апостроф на клавіатурі розташований незручно. Судячи з того, скільки разів декларанти писали "сімя" замість "cімʼя" і "звязку" замість "зв'язку", знайти його багатьом так і не вдалось.
+    <p>Що там не кажи, а апостроф на клавіатурі розташований незручно. Судячи з того, скільки разів декларанти писали «сімя» замість «cімʼя» і «звязку» замість «зв'язку», знайти його багатьом так і не вдалось.
     </p>
      <p>За необхідності апостроф можна замінити на зірочку, подвійні лапки, мʼякий знак або просто пропустити. Дивіться, до яких прийомів найчастіше вдавались декларанти. Підказка: апостроф на українській розкладці розташований перед цифрою 1.
      </p>
@@ -198,7 +205,7 @@
 
     <h2>Кухаря-рятувальника викликали?
     </h2>
-    <p>А ще ми знайшли в деклараціях професію "кухаря-рятувальника". Уява відразу намалювала людину, яка несе смачний корисний обід до офісу, щоб ти вчасно поїв, навіть якщо заметіль, гроза і тиждень до зарплати. Також кухарі-рятувальники можуть зарадити, коли немає часу або бажання готувати, або коли гості сказали, що будуть за годинку, або ж коли ви намагались приготувати фаршировану щуку, але щось пішло не так.</p>
+    <p>А ще ми знайшли в деклараціях професію «кухаря-рятувальника». Уява відразу намалювала людину, яка несе смачний корисний обід до офісу, щоб ти вчасно поїв, навіть якщо заметіль, гроза і тиждень до зарплати. Також кухарі-рятувальники можуть зарадити, коли немає часу або бажання готувати, або коли гості сказали, що будуть за годинку, або ж коли ви намагались приготувати фаршировану щуку, але щось пішло не так.</p>
 
 <p>Не треба недооцінювати те, чим ви займаєтесь.
 </p>
