--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Інспектор ВОР уоазор</title>
+    <title></title>
 
-<!-- OpenGraph Meta Tags -->
-<meta property="og:site_name"
-      content="Інспектор ВОР уоазор"/>
-<meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
-<meta property="og:title"
-      content=" Інспектор ВОР уоазор"/>
-<meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
-<meta property="og:description"
-      content="Найсмішніші помилки та абревіатури з декларацій чиновників"/>
-<meta property="og:url" content=""/>
-
-
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:site" content="@textyorgua"/>
-<meta property="twitter:account_id" content="49572937"/>
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:url" content="http://texty.org.ua/d/2019/misprints/"/>
-<meta name="twitter:title"
-      content="Інспектор ВОР уоазор"/>
-<meta name="twitter:description"
-      content="Найсмішніші помилки та абревіатури з декларацій чиновників"/>
-<meta name="twitter:image:src" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
-<meta name="twitter:image:width" content="1200"/>
-<meta name="twitter:image:height" content="630"/>
+    <!-- OpenGraph Meta Tags -->
+    <meta property="og:site_name"
+          content="Інспектор ВОР уоазор"/>
+    <meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
+    <meta property="og:title"
+          content=" Інспектор ВОР уоазор"/>
+    <meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
+    <meta property="og:description"
+          content="Найсмішніші помилки та абревіатури з декларацій чиновників"/>
+    <meta property="og:url" content=""/>
 
 
-<!-- Other Meta Tags -->
-<meta name="title"
-      content="Інспектор ВОР уоазор">
-<meta name="description"
-      content="Найсмішніші помилки та абревіатури з декларацій чиновників">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:site" content="@textyorgua"/>
+    <meta property="twitter:account_id" content="49572937"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:url" content="http://texty.org.ua/d/2019/misprints/"/>
+    <meta name="twitter:title"
+          content="Інспектор ВОР уоазор"/>
+    <meta name="twitter:description"
+          content="Найсмішніші помилки та абревіатури з декларацій чиновників"/>
+    <meta name="twitter:image:src" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
+    <meta name="twitter:image:width" content="1200"/>
+    <meta name="twitter:image:height" content="630"/>
 
 
-<!-- Links -->
-<link href="https://fonts.googleapis.com/css?family=Bad+Script|Caveat:400,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Alegreya|PT+Mono|Play|Podkova&display=swap" rel="stylesheet">
+    <!-- Other Meta Tags -->
+    <meta name="title"
+          content="Інспектор ВОР уоазор">
+    <meta name="description"
+          content="Найсмішніші помилки та абревіатури з декларацій чиновників">
 
-<link rel="stylesheet" href="css/styles.css">
 
+    <!-- Links -->
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Caveat:400,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya|PT+Mono|Play|Podkova&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css">
+</head>
 <style>
    .draggedPath {
         fill: none;
@@ -62,7 +63,7 @@
     <!--<div id="cover-hover"></div>-->
     <img src="img/cover.png"/>
     <div id="titleContainer" class="desk">
-        <h1 id="title" class="desk">«Інспектор <span style="letter-spacing: 4px; color:red; margin-bottom: 20px;
+        <h1 id="titleDesk" class="desk">«Інспектор <span style="letter-spacing: 4px; color:red; margin-bottom: 20px;
 ">ВОР </span>уоазор»</h1>
         <h1 id="subtitle" class="desk">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
     </div>
@@ -72,8 +73,7 @@
 
 <div class="textContent">
     <div id="titleContainer" class="mob">
-        <h1 id="title">«Інспектор <span style="letter-spacing: 4px; color:red; margin-bottom: 20px;
-">ВОР </span>уоазор»</h1>
+        <h1 id="titleMob"></h1>
         <h1 id="subtitle">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
     </div>
 
@@ -322,10 +322,37 @@
 
 <script>
 
-    var titleArray = ["Країні потрібні <span style='color:red'>вахівці</span>", "Я у бухгалтери пішов, а в п'ятницю <span style='color:red'>бухалтер...</span>", "<span style='color:red'>Депутут</span> тут, <span style='color:red'>депутам</span> там", "Інспектор <span style='color:red'>ВОР</span> уоазор"];
-    var rand = titleArray[Math.floor(Math.random() * titleArray.length)];
+    var titleArray = ["Країні потрібні <span style='color:red'>вахівці</span>", "Я у бухгалтери пішов, а в пʼятницю <span style='color:red'>бухалтер...</span>", "<span style='color:red'>Депутут</span> тут, <span style='color:red'>депутам</span> там", "«Інспектор <span style='color:red'>ВОР</span> уоазор»"];
+    var tagsArray = ["Країні потрібні вахівці", "Я у бухгалтери пішов, а в пʼятницю бухалтер...", "Депутут тут, депутам там", "«Інспектор ВОР уоазор»"];
 
-    $("#title").html(rand)
+    var randomMumber = Math.floor(Math.random() * titleArray.length);
+    var rand = titleArray[randomMumber];
+
+    $("#titleDesk").html(rand);
+    $("#titleMob").html(rand);
+
+
+    var newMeta = tagsArray[randomMumber];
+    console.log(rand);
+    console.log(newMeta);
+
+
+    $('meta[property="og:site_name"]').remove();
+    $('head').append( '<meta property="og:site_name" content="'+ newMeta + '"' + ">'" );
+
+    $('meta[property="og:title"]').remove();
+    $('head').append( '<meta property="og:title" content="'+ newMeta + '"' + ">'" );
+
+    $('meta[name=title]').remove();
+    $('head').append( '<meta name="title" content="'+ newMeta + '"' + ">'" );
+
+    $('title').remove();
+    $('head').append( '<title>' + newMeta + '</title>');
+
+
+
+//    $('meta[name=title]').attr('content', newMeta);
+
 
 
 
