--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
     <!--<div id="cover-hover"></div>-->
     <img src="img/cover.png"/>
     <div id="titleContainer" class="desk">
-        <h1 id="titleDesk" class="desk">«Інспектор <span style="letter-spacing: 4px; color:red; margin-bottom: 20px;
-">ВОР </span>уоазор»</h1>
+        <h1 id="titleDesk" class="desk"></h1>
         <h1 id="subtitle" class="desk">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
     </div>
 
