--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
     $("#titleMob").html(rand);
 
     var newMeta = tagsArray[randomMumber];
+    $("title").text(newMeta);
 
 
 //    міняємо сторінку для шеру, в залежності від назви
