--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 <div class="textContent">
     <div id="titleContainer" class="mob">
-        <h1 id="titleMob"></h1>
-        <h1 id="subtitle">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
+        <h1 id="titleMob" style="width:100%;"></h1>
+        <h1 id="subtitle" style="width:100%;">Найсмішніші помилки та абревіатури з декларацій чиновників</h1>
     </div>
 
     <p>У червні на ТЕКСТАХ вийшла <a href="http://texty.org.ua/d/2019/salaries/" target="_blank">стаття</a> про зарплати в держсекторі на основі даних із понад мільйона декларацій. Виконання цього проекту мало одну особливість. Декларанти при зазначенні своїх професій наробили стільки помилок і хибодруків, що це суттєво ускладнило процес аналізу даних. Але, ніде правди діти, від цього він став дещо веселішим.
