--- a/shares/04.html
+++ b/shares/04.html
@@ -10,6 +10,7 @@
     <meta property="og:site_name"
           content="Інспектор ВОР уоазор"/>
     <meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
+    <meta property="og:url" content="http://texty.org.ua/d/2019/misprints/"/>
     <meta property="og:title"
           content=" Інспектор ВОР уоазор"/>
     <meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
