--- a/shares/02.html
+++ b/shares/02.html
@@ -10,6 +10,8 @@
     <meta property="og:site_name"
           content="Я у бухгалтери пішов, а в пʼятницю бухалтер..."/>
     <meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
+    <meta property="og:url" content="http://texty.org.ua/d/2019/misprints/"/>
+
     <meta property="og:title"
           content="Я у бухгалтери пішов, а в пʼятницю бухалтер..."/>
     <meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
