--- a/shares/03.html
+++ b/shares/03.html
@@ -10,6 +10,8 @@
     <meta property="og:site_name"
           content="Депутут тут, депутам там"/>
     <meta property="og:type" content="http://texty.org.ua/d/2019/misprints/"/>
+    <meta property="og:url" content="http://texty.org.ua/d/2019/misprints/"/>
+
     <meta property="og:title"
           content="Депутут тут, депутам там"/>
     <meta property="og:image" content="http://texty.org.ua/d/2019/misprints/img/cover.png"/>
