--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 <script src="lib/share-behavior.js"></script>
-<script src="lib/shuffletext.jquery.min.js"></script>
+<!-- <script src="lib/shuffletext.jquery.min.js"></script> -->
 <script src="js/script.js"></script>
 <script src="js/mobile.js"></script>
 
